# nspr

./: .gitignore  BUILD.bazel  MODULE.bazel
lib/ds/: BUILD.bazel
lib/libc/: BUILD.bazel
pr/: BUILD.bazel  config.bzl
pr/include/: BUILD.bazel
pr/src/: BUILD.bazel
pr/src/io/: BUILD.bazel
pr/src/linking/: BUILD.bazel
pr/src/malloc/: BUILD.bazel
pr/src/md/: BUILD.bazel
pr/src/md/unix/: BUILD.bazel
pr/src/memory/: BUILD.bazel
pr/src/misc/: BUILD.bazel
pr/src/pthreads/: BUILD.bazel
pr/src/threads/: BUILD.bazel
