load("@//pr:config.bzl", "cc_library")

cc_library(
    name = "io",
    srcs = [
        "prfdcach.c",
        "priometh.c",
        "pripv6.c",
        "prlayer.c",
        "prlog.c",
        "prmapopt.c",
        "prmmap.c",
        "prmwait.c",
        "prpolevt.c",
        "prprf.c",
        "prscanf.c",
        "prstdio.c",
    ],
    visibility = ["//pr:__subpackages__"],
)
